macros/tests/unhappy/unexpected_input.test.stderr
error: unexpected input, wasm_export macro is only applicable to impl blocks or standalone functions
 --> tests/unhappy/unexpected_input.test.rs:5:1
  |
5 | struct TestStruct;
  | ^^^^^^^^^^^^^^^^^^

error: unexpected input, wasm_export macro is only applicable to impl blocks or standalone functions
 --> tests/unhappy/unexpected_input.test.rs:8:1
  |
8 | enum TestEnum {}
  | ^^^^^^^^^^^^^^^^

error: unexpected input, wasm_export macro is only applicable to impl blocks or standalone functions
  --> tests/unhappy/unexpected_input.test.rs:11:1
   |
11 | type TestType = u8;
   | ^^^^^^^^^^^^^^^^^^^

error: unexpected input, wasm_export macro is only applicable to impl blocks or standalone functions
  --> tests/unhappy/unexpected_input.test.rs:14:1
   |
14 | mod test_mod {}
   | ^^^^^^^^^^^^^^^

error: unexpected input, wasm_export macro is only applicable to impl blocks or standalone functions
  --> tests/unhappy/unexpected_input.test.rs:17:1
   |
17 | const TEST_COST: u8 = 1;
   | ^^^^^^^^^^^^^^^^^^^^^^^^

error: unexpected input, wasm_export macro is only applicable to impl blocks or standalone functions
  --> tests/unhappy/unexpected_input.test.rs:20:1
   |
20 | static TEST_STATIC: u8 = 1;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
